--- a/lifefixweb-main/category.html
+++ b/lifefixweb-main/category.html
@@ -63,7 +63,10 @@
         location.href = "food.html";
       }
       else if (type === "การเรียน") {
-        location.href = "study.html";   // ⭐ เพิ่ม
+        location.href = "study.html";
+      }
+      else if (type === "การเงิน") {
+        location.href = "finance.html"; // ⭐ เพิ่ม
       }
       else {
         location.href = "problems.html";
