--- a/lifefixweb-main/category.html
+++ b/lifefixweb-main/category.html
@@ -15,7 +15,7 @@
   <div class="page" style="max-width: 600px;">
 
     <div class="top-bar">
-      <div class="app-title" style="font-size: 1.5rem; color: #FF6F61;">LifeFix Web" 🎈</div>
+      <div class="app-title" style="font-size: 1.5rem; color: #FF6F61;">LifeFix Web 🎈</div>
       <div>
         <button class="icon-btn" onclick="openHistory()">📜 ประวัติ</button>
         <button class="icon-btn" onclick="location.href='logout.html'">🚪 ออก</button>
