--- a/lifefixweb-main/problems.html
+++ b/lifefixweb-main/problems.html
@@ -8,6 +8,97 @@
   <meta name="theme-color" content="#FFB7B2">
   <title>เลือกปัญหา</title>
   <link rel="stylesheet" href="style.css">
+  <style>
+    /* Chat Interface Styles */
+    .chat-container {
+      background: #fff;
+      border: 3px solid #eee;
+      border-radius: 20px;
+      padding: 15px;
+      height: 300px;
+      overflow-y: auto;
+      margin-bottom: 15px;
+      display: flex;
+      flex-direction: column;
+      gap: 10px;
+    }
+
+    .chat-bubble {
+      max-width: 80%;
+      padding: 10px 15px;
+      border-radius: 15px;
+      font-size: 0.95rem;
+      line-height: 1.4;
+      position: relative;
+      animation: fadeIn 0.3s ease;
+    }
+
+    @keyframes fadeIn {
+      from {
+        opacity: 0;
+        transform: translateY(10px);
+      }
+
+      to {
+        opacity: 1;
+        transform: translateY(0);
+      }
+    }
+
+    .bubble-user {
+      align-self: flex-end;
+      background: #E0F7FA;
+      color: #006064;
+      border-bottom-right-radius: 2px;
+    }
+
+    .bubble-bot {
+      align-self: flex-start;
+      background: #F1F8E9;
+      color: #33691E;
+      border-bottom-left-radius: 2px;
+      border: 1px solid #DCEDC8;
+    }
+
+    .typing-indicator {
+      align-self: flex-start;
+      background: #f0f0f0;
+      padding: 10px 15px;
+      border-radius: 15px;
+      display: none;
+      align-items: center;
+      gap: 5px;
+    }
+
+    .typing-dot {
+      width: 8px;
+      height: 8px;
+      background: #aaa;
+      border-radius: 50%;
+      animation: typing 1.4s infinite ease-in-out both;
+    }
+
+    .typing-dot:nth-child(1) {
+      animation-delay: -0.32s;
+    }
+
+    .typing-dot:nth-child(2) {
+      animation-delay: -0.16s;
+    }
+
+    @keyframes typing {
+
+      0%,
+      80%,
+      100% {
+        transform: scale(0);
+      }
+
+      40% {
+        transform: scale(1);
+      }
+    }
+  </style>
 </head>
 
 <body class="bg-cartoon">
@@ -28,12 +119,28 @@
       <button class="cartoon-btn secondary" onclick="sendProblem()">ส่งปัญหาให้เราทราบ</button>
     </div>
 
+    <!-- Smart AI Section -->
     <div class="cartoon-card" style="text-align: left;">
-      <h3 style="color: #2196F3; text-align: center;">🤖 ถามพี่หุ่นยนต์ LifeFix</h3>
-      <input id="aiInput" class="cartoon-input" placeholder="เช่น เครียดทำยังไงดี">
-      <button class="cartoon-btn" onclick="askAI()">ถามพี่หุ่นยนต์</button>
-      <div id="aiReply"
-        style="margin-top:20px; color:#555; background: #F0F4C3; padding: 15px; border-radius: 15px; border: 2px dashed #CDDC39; display: none;">
+      <div style="display: flex; align-items: center; justify-content: center; gap: 10px; margin-bottom: 10px;">
+        <span style="font-size: 2rem;">🤖</span>
+        <h3 style="color: #2196F3; margin: 0;">พี่หุ่นยนต์ LifeFix</h3>
+      </div>
+      <p style="text-align: center; font-size: 0.9rem; color: #888;">ถามได้ทุกเรื่องในหมวดนี้นะครับ!</p>
+
+      <div id="chatBox" class="chat-container">
+        <div class="chat-bubble bubble-bot">สวัสดีครับ! มีอะไรให้พี่หุ่นยนต์ช่วยไหมเอ่ย? ถามมาได้เลยนะ! 😃</div>
+      </div>
+
+      <div class="typing-indicator" id="typingIndicator">
+        <div class="typing-dot"></div>
+        <div class="typing-dot"></div>
+        <div class="typing-dot"></div>
+      </div>
+
+      <div style="display: flex; gap: 10px;">
+        <input id="aiInput" class="cartoon-input" style="margin: 0;" placeholder="พิมพ์คำถาม..."
+          onkeypress="handleEnter(event)">
+        <button class="cartoon-btn" style="width: auto; margin: 0; padding: 0 20px;" onclick="askSmartAI()">ส่ง</button>
       </div>
     </div>
 
@@ -43,17 +150,61 @@
     let cat = localStorage.getItem("cat");
     document.getElementById("catTitle").innerText = "หมวด " + cat;
 
+    // --- 1. Basic Problems List Logic ---
     const problems = {
-      "การเงิน": ["เงินไม่พอใช้", "อยากเก็บเงิน", "ใช้เงินฟุ่มเฟือย", "ไม่มีเงินค่าขนม", "อยากซื้อของแต่เงินไม่พอ", "เงินหมดกลางเดือน", "ไม่มีเงินไปโรงเรียน", "ใช้เงินตามเพื่อน", "ไม่กล้าบอกพ่อแม่เรื่องเงิน", "ไม่มีเงินเก็บเลย"],
-      "การเรียน": ["อ่านไม่ทัน", "สอบตก", "ไม่มีสมาธิเรียน", "ขี้เกียจเรียน", "ไม่เข้าใจบทเรียน", "ลืมการบ้าน", "ทำการบ้านไม่เสร็จ", "ไม่กล้ายกมือถาม", "เรียนแล้วง่วง", "คะแนนตก"],
-      "อาหาร": ["ไม่รู้จะกินอะไร", "กินไม่ตรงเวลา", "กินไม่ครบ5หมู่", "กินขนมเยอะ", "ไม่ชอบกินผัก", "ดื่มน้ำน้อย", "ปวดท้องบ่อย", "เบื่ออาหาร", "น้ำหนักขึ้น", "น้ำหนักลด"],
-      "อื่นๆ": ["เครียด", "นอนไม่พอ", "ไม่มีเวลา", "เหงา", "เบื่อ", "ไม่มีเพื่อน", "โดนล้อ", "คิดถึงบ้าน", "ไม่มีแรงจูงใจ", "กลัวสอบ"]
+      "การเงิน": [
+        "เก็บเงินไม่อยู่",
+        "อยากได้ของแพงแต่เงินไม่พอ",
+        "เพื่อนขอยืมเงิน",
+        "ใช้เงินเกินตัว",
+        "ไม่กล้าขอเงินพ่อแม่",
+        "เงินหาย",
+        "เป็นหนี้เพื่อน",
+        "ไม่มีเงินกินข้าว",
+        "อยากหางานพิเศษ",
+        "โดนโกงเงินออนไลน์"
+      ],
+      "การเรียน": [
+        "ขี้เกียจอ่านหนังสือ",
+        "เรียนไม่รู้เรื่อง",
+        "ทำการบ้านไม่ได้",
+        "กลัวสอบตก",
+        "ครูสอนเร็วเกินไป",
+        "ทำงานกลุ่มคนเดียว",
+        "หมดไฟในการเรียน",
+        "โดนกดดันเรื่องเกรด",
+        "เลือกสายการเรียนไม่ถูก",
+        "ลืมส่งงาน"
+      ],
+      "อาหาร": [
+        "กินเท่าไหร่ก็ไม่อิ่ม",
+        "เบื่ออาหารเดิมๆ",
+        "อยากลดความอ้วน",
+        "อยากเพิ่มน้ำหนัก",
+        "ไม่ชอบกินผัก",
+        "กินดึกบ่อยๆ",
+        "ปวดท้องโรคกระเพาะ",
+        "สิวขึ้นเพราะอาหาร",
+        "แพ้อาหารไม่รู้ตัว",
+        "กินข้าวไม่ตรงเวลา"
+      ],
+      "อื่นๆ": [
+        "ติดโทรศัพท์",
+        "ทะเลาะกับเพื่อน",
+        "พ่อแม่ไม่เข้าใจ",
+        "นอนไม่หลับ",
+        "รู้สึกเหงา",
+        "โดนบูลลี่ (Bully)",
+        "ไม่มั่นใจในตัวเอง",
+        "อกหัก",
+        "เครียดเรื่องอนาคต",
+        "อายเพื่อน"
+      ]
     };
 
     let list = document.getElementById("list");
     if (problems[cat]) {
       problems[cat].forEach(p => {
-        // Using category-item style but full width
         list.innerHTML += `<div class="cartoon-card" style="margin-bottom: 15px; padding: 20px; cursor: pointer; display: flex; align-items: center; justify-content: space-between;" onclick="openDetail('${p}')">
           <span style="font-size: 1.1rem; font-weight: bold;">${p}</span>
           <span style="font-size: 1.5rem;">👉</span>
@@ -71,113 +222,187 @@
     function sendProblem() {
       let t = document.getElementById("userProblem").value.trim();
       if (!t) { alert("พิมพ์ปัญหาก่อนนะจ๊ะ"); return; }
+      let currentUser = localStorage.getItem("currentUser") || "guest";
+      let key = "userProblems_" + currentUser;
+      let db = JSON.parse(localStorage.getItem(key) || "[]");
 
-      let db = JSON.parse(localStorage.getItem("userProblems") || "[]");
       db.push({ cat: cat, text: t, time: new Date().toLocaleString() });
-      localStorage.setItem("userProblems", JSON.stringify(db));
-
+      localStorage.setItem(key, JSON.stringify(db));
       document.getElementById("userProblem").value = "";
       alert("ขอบคุณที่บอกเรานะ เราได้รับปัญหาแล้ว 💚");
     }
 
-    function askAI() {
-      let q = document.getElementById("aiInput").value.trim();
-      let out = document.getElementById("aiReply");
-      out.style.display = "block";
+    // --- 2. Smart AI Logic ---
 
-      if (q == "") { out.innerText = "พิมพ์คำถามก่อนนะจ๊ะ 🙂"; return; }
+    // Knowledge Base with Intent Scoring
+    const knowledgeBase = [
+      // --- General ---
+      {
+        intent: "greeting",
+        keywords: ["สวัสดี", "ดีจ้า", "ฮัลโหล", "ทักทาย", "hi", "hello"],
+        category: "general",
+        response: "สวัสดีครับ! วันนี้เป็นยังไงบ้าง? มีเรื่องไม่สบายใจอะไรเล่าให้พี่ฟังได้นะ 😊"
+      },
+      {
+        intent: "identity",
+        keywords: ["ใคร", "ชื่ออะไร", "ทำอะไรได้", "หุ่นยนต์"],
+        category: "general",
+        response: "พี่คือหุ่นยนต์ LifeFix ครับ! พี่ถูกสร้างมาเพื่อช่วยน้องๆ แก้ปัญหาชีวิตประจำวัน ทั้งเรื่องเรียน เรื่องเงิน หรือเรื่องสุขภาพ ถามมาได้เลย!"
+      },
+      // --- Finance ---
+      {
+        intent: "save_money",
+        keywords: ["ออม", "เก็บเงิน", "หยอดกระปุก", "รวย", "เงินเก็บ"],
+        category: "การเงิน",
+        response: "อยากเก็บเงินเก่งๆ ใช่ไหม? ลองสูตรนี้ดูสิ:\n1. หักเงินออมทันทีที่ได้ค่าขนม (เช่น 10%)\n2. หยอดกระปุกทุกวันที่กลับถึงบ้าน\n3. ถ้าอยากได้ของแพงๆ ให้รอก่อน 3 วัน ถ้ายังอยากได้ค่อยซื้อ\nเริ่มทำวันนี้เลยนะ! 💰"
+      },
+      {
+        intent: "debt",
+        keywords: ["หนี้", "ติดเงิน", "ยืมเงิน", "คืนเงิน"],
+        category: "การเงิน",
+        response: "เรื่องหนี้อึดอัดใจเนอะ พี่แนะนำให้ลิสต์ออกมาว่าติดเงินใครเท่าไหร่ แล้วทยอยคืนทีละนิดครับ หรือลองคุยกับเจ้าหนี้ตรงๆ ว่าเราจะผ่อนคืนยังไง ความจริงใจสำคัญที่สุดนะ 🤝"
+      },
+      {
+        intent: "spending",
+        keywords: ["ใช้เงิน", "ฟุ่มเฟือย", "หมด", "ซื้อของ", "ช็อป"],
+        category: "การเงิน",
+        response: "เงินหมดไวใช่ไหม? ลองจด 'รายรับ-รายจ่าย' ดูสิครับ (ในแอปเรามีฟีเจอร์นี้นะ!) พอเราเห็นตัวเลข เราจะรู้ทันทีว่าเราหมดเงินไปกับอะไรมากที่สุด แล้วจะแก้ได้ตรงจุดเลย! 📉"
+      },
+      // --- Study ---
+      {
+        intent: "exam",
+        keywords: ["สอบ", "คะแนน", "เกรด", "ตก", "อ่านหนังสือ"],
+        category: "การเรียน",
+        response: "ช่วงสอบสำคัญมาก! เทคนิคคือ:\n1. อ่านสารบัญก่อนเพื่อดูภาพรวม\n2. ใช้ปากกาไฮไลท์สีๆ\n3. ติวให้เพื่อน (การสอนคนอื่นจะทำให้เราจำแม่นขึ้น 90%)\nสู้เขานะ! 📚"
+      },
+      {
+        intent: "homework",
+        keywords: ["การบ้าน", "ไม่เสร็จ", "ยาก", "ลอก", "ครู"],
+        category: "การเรียน",
+        response: "การบ้านเยอะเหรอ? ลองใช้เทคนิค Pomodoro ดูครับ ตั้งเวลาทำ 25 นาที พัก 5 นาที จะช่วยให้ไม่เบื่อและงานเสร็จไวกว่าทำรวดเดียวด้วยนะ! ⏰"
+      },
+      // --- Food ---
+      {
+        intent: "health_eating",
+        keywords: ["กิน", "อ้วน", "ผอม", "ลดน้ำหนัก", "หิว", "ข้าว"],
+        category: "อาหาร",
+        response: "เรื่องกินสำคัญมาก! พยายามกินให้ครบ 3 มื้อนะ โดยเฉพาะมื้อเช้าห้ามขาด! ถ้ากลัวอ้วน ให้ลดของหวานและน้ำอัดลม เปลี่ยนมากินผลไม้แทน สดชื่นและไม่อ้วนด้วย! 🍎"
+      },
+      {
+        intent: "pain",
+        keywords: ["ปวดท้อง", "เจ็บ", "ไม่สบาย", "อาเจียน"],
+        category: "อาหาร",
+        response: "ถ้าไม่สบายเกี่ยวกับท้อง ไส้ ต้องระวังเรื่องความสะอาดนะ ล้างมือก่อนกินข้าวเสมอ และถ้าปวดมากต้องบอกผู้ปกครองทันทีนะครับ อย่าเก็บไว้คนเดียว 🏥"
+      },
+      // --- Other ---
+      {
+        intent: "stress",
+        keywords: ["เครียด", "เบื่อ", "เซ็ง", "เศร้า", "ร้องไห้"],
+        category: "อื่นๆ",
+        response: "โอ๋ๆ ไม่เป็นไรนะ ความเครียดเป็นเรื่องปกติ ลองหายใจเข้าลึกๆ นับ 1-10 หรือไปเดินเล่นดูต้นไม้สีเขียวๆ จะช่วยให้สมองโล่งขึ้นครับ พี่เป็นกำลังใจให้นะ 💚"
+      },
+      {
+        intent: "sleep",
+        keywords: ["นอน", "ง่วง", "ตื่นสาย", "ไม่หลับ"],
+        category: "อื่นๆ",
+        response: "อย่านอนดึกนะ! วัยเรียนควรนอน 8-9 ชั่วโมง ถ้านอนไม่หลับ ลองงดเล่นมือถือก่อนนอน 30 นาที จะช่วยให้หลับลึกและตื่นมาสดชื่นแน่นอน 😴"
+      }
+    ];
 
-      q = q.toLowerCase();
-      let cat = localStorage.getItem("cat");
-      let ok = false;
+    function handleEnter(e) {
+      if (e.key === 'Enter') askSmartAI();
+    }
 
-      const topic = {
-        "การเงิน": {
-          save: ["ออม", "เก็บเงิน", "หยอด", "กระปุก"],
-          debt: ["หนี้", "ยืม", "คืน"],
-          spend: ["ฟุ่มเฟือย", "ซื้อ", "ของ", "เงินหมด"],
-          pocket: ["ค่าขนม"]
-        },
-        "การเรียน": {
-          read: ["อ่าน", "ทบทวน"],
-          exam: ["สอบ", "คะแนน"],
-          hw: ["การบ้าน"],
-          focus: ["สมาธิ", "ง่วง"]
-        },
-        "อาหาร": {
-          eat: ["กิน", "ข้าว", "อาหาร"],
-          fat: ["อ้วน", "น้ำหนัก"],
-          pain: ["ปวดท้อง", "ไม่สบาย"]
-        },
-        "อื่นๆ": {
-          stress: ["เครียด", "กังวล"],
-          sleep: ["นอน", "ง่วง"],
-          sad: ["เหงา", "เศร้า"]
-        }
-      };
+    function addBubble(text, type) {
+      const chatBox = document.getElementById('chatBox');
+      const bubble = document.createElement('div');
+      bubble.className = `chat-bubble bubble-${type}`;
+      bubble.innerText = text;
+      chatBox.appendChild(bubble);
+      chatBox.scrollTop = chatBox.scrollHeight;
+    }
 
-      // ตรวจว่านอกหมวดไหม
-      if (topic[cat]) {
-        Object.values(topic[cat]).forEach(arr => {
-          arr.forEach(k => { if (q.includes(k)) ok = true; });
+    function askSmartAI() {
+      const inputEl = document.getElementById('aiInput');
+      const text = inputEl.value.trim();
+      if (!text) return;
+
+      // 1. User Bubble
+      addBubble(text, 'user');
+      inputEl.value = '';
+
+      // 2. Show Typing Indicator
+      const typing = document.getElementById('typingIndicator');
+      typing.style.display = 'flex';
+      const chatBox = document.getElementById('chatBox');
+      chatBox.scrollTop = chatBox.scrollHeight;
+
+      // 3. Process Logic (Simulated Delay)
+      setTimeout(() => {
+        typing.style.display = 'none';
+        const response = processQuery(text);
+        addBubble(response, 'bot');
+      }, 1200);
+    }
+
+    function processQuery(query) {
+      const lowerQ = query.toLowerCase();
+      const currentCat = localStorage.getItem("cat"); // "การเงิน", "การเรียน", "อาหาร", "อื่นๆ"
+
+      // Step 1: Score all intents
+      let bestMatch = null;
+      let maxScore = 0;
+
+      knowledgeBase.forEach(item => {
+        let score = 0;
+        item.keywords.forEach(k => {
+          if (lowerQ.includes(k)) score += 1;
         });
-      } else {
-        // If category not found in topic map, skip validation or handle appropriately
-        // Let's assume ok=true for unknown categories to allow generic fallback
+
+        if (score > maxScore) {
+          maxScore = score;
+          bestMatch = item;
+        }
+      });
+
+      // Step 2: Analyze Result
+
+      // Case A: No keyword match found
+      if (maxScore === 0) {
+        return "พี่หุ่นยนต์ยังไม่ค่อยเข้าใจคำถามครับ 😅 ลองถามใหม่ด้วยคำง่ายๆ หรือถามเกี่ยวกับหัวข้อ " + currentCat + " ได้เลยครับ";
       }
 
-      if (!ok) {
-        out.innerText = "คำถามนี้อยู่นอกหมวด " + cat + " พี่หุ่นยนต์ยังตอบไม่ได้จ้า 🙏 ลองถามเรื่องเกี่ยวกับ " + cat + " ดูนะ";
-        return;
+      // Case B: General Intent (Greeting/Identity) - Always allow
+      if (bestMatch.category === "general") {
+        return bestMatch.response;
       }
 
-      // ---------- ตอบแบบยาว ----------
-      let reply = "";
-
-      if (cat == "การเงิน") {
-        if (topic[cat].save.some(k => q.includes(k))) {
-          reply = "การออมเงินเก่งมากเลย! เริ่มจากแบ่งค่าขนมวันละ 10–20 บาท หยอดกระปุกทุกวัน พอเห็นเงินเยอะขึ้น จะภูมิใจสุดๆ ไปเลย!";
-        }
-        else if (topic[cat].spend.some(k => q.includes(k))) {
-          reply = "ซื้อของเก่งระวังเงินหมดนะ! ลองรอ 1 วันก่อนซื้อของที่อยากได้ จะช่วยให้เรารู้ว่าเราอยากได้จริงๆ หรือเปล่า จดรายจ่ายก็ช่วยได้นะ!";
-        }
-        else {
-          reply = "พี่แนะนำให้เริ่มจดบันทึกรายรับรายจ่าย และแบ่งเงินเก็บก่อนใช้ทุกวันนะ";
-        }
-      }
-
-      else if (cat == "การเรียน") {
-        if (topic[cat].read.some(k => q.includes(k))) {
-          reply = "อ่านหนังสือไม่ต้องอ่านนานนะ! อ่าน 25 นาที พัก 5 นาที (Pomodoro) จะช่วยให้จำแม่นขึ้น สู้ๆ นะ!";
-        }
-        else if (topic[cat].exam.some(k => q.includes(k))) {
-          reply = "เตรียมสอบหรอ? เริ่มอ่านล่วงหน้าสัก 7 วัน แบ่งบทเรียนเป็นวันๆ แล้วทวนก่อนนอน คะแนนพุ่งแน่นอน!";
-        }
-        else {
-          reply = "ลองจัดตารางอ่านหนังสือวันละนิด จะช่วยให้เข้าใจมากขึ้นนะ";
-        }
-      }
-
-      else if (cat == "อาหาร") {
-        if (topic[cat].eat.some(k => q.includes(k))) {
-          reply = "กินครบ 5 หมู่หรือยัง? อย่าลืมมื้อเช้านะ สำคัญมาก! ดื่มน้ำเยอะๆ ร่างกายจะได้สดชื่น";
-        }
-        else {
-          reply = "กินให้ตรงเวลา ลดขนมหวานๆ ของทอดๆ จะสุขภาพดีแข็งแรงนะ";
+      // Case C: Strict Category Enforcement
+      // If the best matching intent belongs to a different category than the current page
+      if (bestMatch.category !== currentCat && bestMatch.category !== "อื่นๆ") { // "อื่นๆ" might sometimes overlap, but let's be strict usually
+        // Exception: "อื่นๆ" category page allows generic queries? Let's say yes if current is "อื่นๆ"
+        if (currentCat === "อื่นๆ") {
+          // If current is "Others", maybe allow everything? Or strictly "Others"?
+          // Let's be strict: if I am in "Others" but ask about "Money", should I answer?
+          // The prompt said: "answer according to the topic... if outside topic, refuse and suggest"
+          if (bestMatch.category === "การเงิน" || bestMatch.category === "การเรียน" || bestMatch.category === "อาหาร") {
+            return `คำถามนี้ดูเหมือนจะเป็นเรื่อง "${bestMatch.category}" นะครับ 🤔\nตอนนี้เราอยู่ที่หมวด "${currentCat}"\nลองย้ายไปหมวด "${bestMatch.category}" เพื่อคุยเรื่องนี้จะดีกว่าครับ`;
+          }
+        } else {
+          // Current is Money/Study/Food, but Intent is diff
+          return `อุ๊ย! คำถามนี้เป็นเรื่องเกี่ยวกับ "${bestMatch.category}" ครับ 🚧\nแต่นี่คือห้อง "${currentCat}"\nพี่หุ่นยนต์ขออนุญาตไม่ตอบข้ามห้องนะ เดี๋ยวเพื่อนๆ งง! ย้ายห้องกันเถอะ`;
         }
       }
 
-      else {
-        reply = "เรื่องนี้พี่ว่า ลองคุยกับคุณพ่อคุณแม่ หรือเพื่อนที่ไว้ใจได้ดูนะ การระบายความรู้สึกออกมาจะช่วยให้สบายใจขึ้นเยอะเลย";
-      }
-
-      out.innerText = "🤖 พี่หุ่นยนต์แนะนำ:\n\n" + reply;
+      // Case D: Correct Category or Safe Fallback
+      return bestMatch.response;
     }
 
     if ("serviceWorker" in navigator) {
       navigator.serviceWorker.register("service-worker.js");
     }
   </script>
+
 </body>
 
 </html>
