--- a/lifefixweb-main/study.html
+++ b/lifefixweb-main/study.html
@@ -18,6 +18,9 @@
 
             <button class="cartoon-btn" onclick="goStudyProblem()">😣 มีปัญหาเรื่องเรียน</button>
             <button class="cartoon-btn secondary" onclick="goSubject()">📚 อยากหาความรู้</button>
+            <button class="cartoon-btn"
+                style="background-color: #AB47BC; border-color: #8E24AA; color: white; margin-top: 10px;"
+                onclick="location.href='exams.html'">📝 รวมข้อสอบ A-Level / TGAT / สอวน.</button>
 
             <div style="margin-top: 20px;">
                 <a href="category.html">⬅ ย้อนกลับ</a>
