--- a/exams.html
+++ b/exams.html
@@ -4,8 +4,105 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>รวมข้อสอบ</title>
+    <title>รวมข้อสอบ - LifeFix</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Prompt:wght@300;400;600&display=swap" rel="stylesheet">
+    <style>
+        body {
+            font-family: 'Prompt', sans-serif;
+        }
+
+        .menu-btn {
+            background: white;
+            border-radius: 20px;
+            padding: 20px;
+            margin-bottom: 20px;
+            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
+            border: 2px solid transparent;
+            cursor: pointer;
+            transition: transform 0.2s, box-shadow 0.2s, border-color 0.2s;
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            font-size: 1.2rem;
+            font-weight: 600;
+            color: #444;
+        }
+
+        .menu-btn:hover {
+            transform: translateY(-3px);
+            box-shadow: 0 8px 20px rgba(0, 0, 0, 0.15);
+            border-color: #FFB7B2;
+        }
+
+        .menu-btn.tgat {
+            border-left: 10px solid #FF6F61;
+        }
+
+        .menu-btn.posn {
+            border-left: 10px solid #4DB6AC;
+        }
+
+        .icon-box {
+            font-size: 2rem;
+            margin-right: 15px;
+        }
+
+        .arrow {
+            font-size: 1.5rem;
+            color: #ccc;
+            transition: transform 0.3s;
+        }
+
+        .posn-arrow.open {
+            transform: rotate(180deg);
+        }
+
+        /* Collapsible Area */
+        #posn-list {
+            display: none;
+            flex-direction: column;
+            gap: 10px;
+            margin-top: -10px;
+            margin-bottom: 20px;
+            animation: slideDown 0.3s ease-out;
+        }
+
+        @keyframes slideDown {
+            from {
+                opacity: 0;
+                transform: translateY(-10px);
+            }
+
+            to {
+                opacity: 1;
+                transform: translateY(0);
+            }
+        }
+
+        .subject-link {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            background: #f9f9f9;
+            padding: 15px 20px;
+            border-radius: 15px;
+            text-decoration: none;
+            color: #555;
+            transition: all 0.2s;
+            border: 1px solid #eee;
+            margin-left: 20px;
+            /* Indent sub items */
+        }
+
+        .subject-link:hover {
+            background: white;
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+            transform: translateX(5px);
+            color: #4DB6AC;
+            border-color: #4DB6AC;
+        }
+    </style>
 </head>
 
 <body class="bg-cartoon">
@@ -17,79 +114,43 @@
             <button class="icon-btn" onclick="location.href='study.html'">🔙 กลับ</button>
         </div>
 
-        <div class="cartoon-card" style="border-color: #AB47BC;">
-            <h2 style="margin-top: 0; color: #7B1FA2;">เลือกสนามสอบ 🏁</h2>
-            <select id="exam-type" class="cartoon-input" onchange="updateSubjects()">
-                <option value="alevel">A-Level (9 วิชาสามัญ)</option>
-                <option value="tgat">TGAT / TPAT</option>
-                <option value="posn">สอวน. (โอลิมปิกวิชาการ)</option>
-            </select>
+        <h2 style="text-align: center; color: #555; margin-bottom: 30px;">เลือกสนามสอบ 🏁</h2>
+
+        <!-- TGAT / TPAT Button -->
+        <div class="menu-btn tgat" onclick="openTgat()">
+            <div style="display: flex; align-items: center;">
+                <div class="icon-box">🎒</div>
+                <div>TGAT / TPAT / A-Level</div>
+            </div>
+            <div class="arrow">🔗</div>
         </div>
 
-        <div class="cartoon-card" style="margin-top: 20px;">
-            <h3 style="margin-top: 0;">เลือกวิชา 📚</h3>
-            <div id="subject-list" class="grid-container" style="grid-template-columns: 1fr 1fr; gap: 10px;">
-                <!-- Subjects will be injected here -->
+        <!-- POSN Button -->
+        <div class="menu-btn posn" onclick="openPosn()">
+            <div style="display: flex; align-items: center;">
+                <div class="icon-box">⚛️</div>
+                <div>สอวน. (POSN)</div>
             </div>
+            <div class="arrow">➜</div>
         </div>
 
     </div>
 
     <script>
-        const subjects = {
-            "alevel": [
-                { name: "คณิตศาสตร์ 1", url: "https://www.trueplookpanya.com/tcas/article/detail/91544" },
-                { name: "คณิตศาสตร์ 2", url: "https://www.trueplookpanya.com/tcas/article/detail/91544" },
-                { name: "ฟิสิกส์", url: "https://www.trueplookpanya.com/tcas/article/detail/91546" },
-                { name: "เคมี", url: "https://www.trueplookpanya.com/tcas/article/detail/91547" },
-                { name: "ชีววิทยา", url: "https://www.trueplookpanya.com/tcas/article/detail/91548" },
-                { name: "ภาษาไทย", url: "https://www.trueplookpanya.com/tcas/article/detail/91541" },
-                { name: "สังคมศึกษา", url: "https://www.trueplookpanya.com/tcas/article/detail/91542" },
-                { name: "ภาษาอังกฤษ", url: "https://www.trueplookpanya.com/tcas/article/detail/91543" }
-            ],
-            "tgat": [
-                { name: "TGAT1 การสื่อสารอังกฤษ", url: "https://www.trueplookpanya.com/tcas/article/detail/96238" },
-                { name: "TGAT2 การคิดอย่างมีเหตุผล", url: "https://www.trueplookpanya.com/tcas/article/detail/96238" },
-                { name: "TGAT3 สมรรถนะการทำงาน", url: "https://www.trueplookpanya.com/tcas/article/detail/96238" },
-                { name: "TPAT1 กสพท", url: "https://www.trueplookpanya.com/tcas/article/detail/96239" },
-                { name: "TPAT3 วิทยาศาสตร์", url: "https://www.trueplookpanya.com/tcas/article/detail/96240" }
-            ],
-            "posn": [
-                { name: "คณิตศาสตร์", url: "https://www.posn.or.th/examination" },
-                { name: "ฟิสิกส์", url: "https://www.posn.or.th/examination" },
-                { name: "เคมี", url: "https://www.posn.or.th/examination" },
-                { name: "ชีววิทยา", url: "https://www.posn.or.th/examination" },
-                { name: "คอมพิวเตอร์", url: "https://www.posn.or.th/examination" },
-                { name: "ดาราศาสตร์", url: "https://www.posn.or.th/examination" }
-            ]
-        };
 
-        function updateSubjects() {
-            const type = document.getElementById("exam-type").value;
-            const list = document.getElementById("subject-list");
-            list.innerHTML = "";
-
-            if (subjects[type]) {
-                subjects[type].forEach(sub => {
-                    const btn = document.createElement("button");
-                    btn.className = "cartoon-btn secondary";
-                    btn.style.fontSize = "1rem";
-                    btn.style.padding = "10px";
-                    btn.innerHTML = sub.name;
-                    btn.onclick = () => {
-                        if (confirm("คุณต้องการเปิดดูข้อสอบ " + sub.name + " ใช่ไหม? (จะเปิดแท็บใหม่)")) {
-                            window.open(sub.url, "_blank");
-                        }
-                    };
-                    list.appendChild(btn);
-                });
-            }
+        function openTgat() {
+            // Updated directly link as requested
+            window.open("https://tcaster.net/mini-exam-fix", "_blank");
         }
 
-        // Initialize
-        updateSubjects();
-    </script>
+        function openPosn() {
+            location.href = 'posn_select.html';
+        }
 
+        if ("serviceWorker" in navigator) {
+            navigator.serviceWorker.register("service-worker.js");
+        }
+    </script>
 </body>
 
 </html>
