--- a/study.html
+++ b/study.html
@@ -17,10 +17,14 @@
             <p>อยากให้ช่วยเรื่องไหนเลือกเลย</p>
 
             <button class="cartoon-btn" onclick="goStudyProblem()">😣 มีปัญหาเรื่องเรียน</button>
-            <button class="cartoon-btn secondary" onclick="goSubject()">📚 อยากหาความรู้</button>
+            <button class="cartoon-btn secondary" onclick="location.href='study_mode_select.html'">📚
+                อยากหาความรู้</button>
             <button class="cartoon-btn"
                 style="background-color: #AB47BC; border-color: #8E24AA; color: white; margin-top: 10px;"
                 onclick="location.href='exams.html'">📝 รวมข้อสอบ A-Level / TGAT / สอวน.</button>
+            <button class="cartoon-btn"
+                style="background-color: #29B6F6; border-color: #0288D1; color: white; margin-top: 10px;"
+                onclick="location.href='guidance_select.html'">🎓 แนะนำสายการเรียนและมหาวิทยาลัย</button>
 
             <div style="margin-top: 20px;">
                 <a href="category.html">⬅ ย้อนกลับ</a>
