--- a/practice_coding.html
+++ b/practice_coding.html
@@ -154,6 +154,11 @@
 
     </div>
 
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/GqzpqlA3kds?si=x-d-_Ahzm-FyEHgS"
+        title="YouTube video player" frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+        referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
     <script>
         const selectedLang = localStorage.getItem("selectedLanguage");
         const titleEl = document.getElementById("lang-title");
@@ -172,7 +177,7 @@
             <h3 style="color: #FF6F61; margin: 0 0 10px 0;">🎥 เรียน Python พื้นฐาน (BorntoDev)</h3>
             <div style="position: relative; padding-bottom: 56.25%; height: 0; border-radius: 15px; overflow: hidden;">
               <iframe style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;" 
-                src="https://www.youtube.com/embed/vq6J37gN20U" 
+                src="https://www.youtube.com/watch?v=iheAKAkiAGg" 
                 title="YouTube video player" frameborder="0" 
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
               </iframe>
@@ -190,7 +195,7 @@
             <h3 style="color: #FF6F61; margin: 0 0 10px 0;">🎥 สอน HTML5 พื้นฐาน (BorntoDev)</h3>
             <div style="position: relative; padding-bottom: 56.25%; height: 0; border-radius: 15px; overflow: hidden;">
               <iframe style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;" 
-                src="https://www.youtube.com/embed/GqzpqlA3kds" 
+                src="https://www.youtube.com/watch?v=DzjO4d9nh_k" 
                 title="YouTube video player" frameborder="0" 
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
               </iframe>
