--- a/practice_coding.html
+++ b/practice_coding.html
@@ -170,12 +170,12 @@
                 tutorial: `
           <div class="tutorial-section" style="padding: 0; overflow: hidden; border: none;">
             <h3 style="color: #FF6F61; margin: 0 0 10px 0;">🎥 เรียน Python พื้นฐาน (BorntoDev)</h3>
-            <div style="position: relative; padding-bottom: 56.25%; height: 0; border-radius: 15px; overflow: hidden;">
-              <iframe style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;" 
-                src="https://www.youtube.com/watch?v=iheAKAkiAGg" 
-                title="YouTube video player" frameborder="0" 
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
-              </iframe>
+            <div style="background: #f0f0f0; border-radius: 15px; padding: 30px; text-align: center; border: 2px dashed #ccc;">
+              <a href="https://www.youtube.com/watch?v=iheAKAkiAGg" target="_blank" style="text-decoration: none;">
+                <button class="cartoon-btn" style="background: #ff0000; color: white; border: none; padding: 10px 20px; font-size: 1.1rem; cursor: pointer;">
+                  ▶️ กดเพื่อดูคลิปบน YouTube
+                </button>
+              </a>
             </div>
           </div>
           <p style="margin-top: 15px; color: #555;">ดูวิดีโอจบแล้ว มาลองเขียน <code>print("ข้อความ")</code> ในช่องขวามือกันเลย!</p>
@@ -188,8 +188,12 @@
                 tutorial: `
            <div class="tutorial-section" style="padding: 0; overflow: hidden; border: none;">
             <h3 style="color: #FF6F61; margin: 0 0 10px 0;">🎥 สอน HTML5 พื้นฐาน (BorntoDev)</h3>
-            <div style="position: relative; padding-bottom: 56.25%; height: 0; border-radius: 15px; overflow: hidden;">
-              <iframe style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"  src="https://www.youtube.com/embed/JEqaTyGu5u4?si=D4Ai4XEQc2fuBwex" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            <div style="background: #f0f0f0; border-radius: 15px; padding: 30px; text-align: center; border: 2px dashed #ccc;">
+              <a href="https://www.youtube.com/embed/JEqaTyGu5u4?si=D4Ai4XEQc2fuBwex" target="_blank" style="text-decoration: none;">
+                <button class="cartoon-btn" style="background: #ff0000; color: white; border: none; padding: 10px 20px; font-size: 1.1rem; cursor: pointer;">
+                  ▶️ กดเพื่อดูคลิปบน YouTube
+                </button>
+              </a>
             </div>
           </div>
           <p style="margin-top: 15px; color: #555;">ลองสร้าง <code>&lt;h1&gt;</code> ของคุณเองในช่องขวามือดูสิ!</p>
@@ -202,12 +206,12 @@
                 tutorial: `
            <div class="tutorial-section" style="padding: 0; overflow: hidden; border: none;">
             <h3 style="color: #FF6F61; margin: 0 0 10px 0;">🎥 สอน JavaScript ในคลิปเดียว (BorntoDev)</h3>
-            <div style="position: relative; padding-bottom: 56.25%; height: 0; border-radius: 15px; overflow: hidden;">
-              <iframe style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;" 
-                src="https://www.youtube.com/embed/x7K4pD-Q_u0" 
-                title="YouTube video player" frameborder="0" 
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
-              </iframe>
+            <div style="background: #f0f0f0; border-radius: 15px; padding: 30px; text-align: center; border: 2px dashed #ccc;">
+              <a href="https://www.youtube.com/embed/x7K4pD-Q_u0" target="_blank" style="text-decoration: none;">
+                <button class="cartoon-btn" style="background: #ff0000; color: white; border: none; padding: 10px 20px; font-size: 1.1rem; cursor: pointer;">
+                  ▶️ กดเพื่อดูคลิปบน YouTube
+                </button>
+              </a>
             </div>
           </div>
           <p style="margin-top: 15px; color: #555;">พร้อมแล้วลองใช้คำสั่ง <code>alert()</code> ดูหน่อยไหม?</p>
