--- a/sign_language.html
+++ b/sign_language.html
@@ -104,12 +104,14 @@
                     <div style="padding: 15px; border-bottom: 2px solid #eee;">
                         <h3 style="margin: 0; color: #555;">📺 วิดีโอสอน: คำศัพท์พื้นฐานในชีวิตประจำวัน</h3>
                     </div>
-                    <div style="position: relative; padding-bottom: 56.25%; height: 0;">
-                        <iframe style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"
-                            src="https://www.youtube.com/embed/gW3pZ18A-w8" title="YouTube video player" frameborder="0"
-                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                            allowfullscreen>
-                        </iframe>
+                    <div style="background: #f0f0f0; padding: 40px; text-align: center; border-radius: 0 0 15px 15px;">
+                        <a href="https://www.youtube.com/watch?v=gW3pZ18A-w8" target="_blank"
+                            style="text-decoration: none;">
+                            <button class="cartoon-btn"
+                                style="background: #ff0000; color: white; border: none; padding: 15px 30px; font-size: 1.2rem; cursor: pointer;">
+                                ▶️ กดเพื่อดูวิดีโอบน YouTube
+                            </button>
+                        </a>
                     </div>
                     <p style="padding: 15px; margin: 0; color: #777; font-size: 0.9rem;">
                         *วิดีโอประกอบการเรียนรู้จาก Geng's Diary
