--- a/solve.html
+++ b/solve.html
@@ -58,7 +58,7 @@
     </ul>
     <textarea placeholder="พิมพ์คำถามเพิ่มเติม..."></textarea>
     <br><br>
-    <button>ส่งคำถาม</button>
+    <button class="cartoon-btn">ส่งคำถาม</button>
   </div>
   <script>
     if ("serviceWorker" in navigator) {
