--- a/study_language.html
+++ b/study_language.html
@@ -356,14 +356,16 @@
             titleEl.innerHTML = data.title;
             descEl.innerHTML = data.desc;
 
-            // Inject Iframe
+            // Inject Link Button instead of Iframe
             videoContainer.innerHTML = `
-        <iframe style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;" 
-          src="https://www.youtube.com/embed/${data.videoId}" 
-          title="YouTube video player" frameborder="0" 
-          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
-        </iframe>
-      `;
+                <div style="background: #f0f0f0; padding: 40px; text-align: center; border-radius: 0 0 15px 15px; min-height: 200px; display: flex; align-items: center; justify-content: center;">
+                    <a href="https://www.youtube.com/watch?v=${data.videoId}" target="_blank" style="text-decoration: none;">
+                        <button class="cartoon-btn" style="background: #ff0000; color: white; border: none; padding: 15px 30px; font-size: 1.2rem; cursor: pointer;">
+                            ▶️ กดเพื่อดูวิดีโอบน YouTube
+                        </button>
+                    </a>
+                </div>
+            `;
 
             // Set default tab content
             renderContent("alphabet");
