--- a/study_mode_select.html
+++ b/study_mode_select.html
@@ -57,7 +57,7 @@
             </div>
         </div>
 
-        <button class="btn-back" onclick="location.href='study.html'">⬅ ย้อนกลับ</button>
+        <button class="icon-btn" onclick="location.href='study.html'">⬅ ย้อนกลับ</button>
     </div>
 
     <script>
