--- a/category.html
+++ b/category.html
@@ -57,6 +57,14 @@
       <button class="fab-btn" onclick="location.href='minigames.html'">🎮</button>
     </div>
 
+    <!-- About Us / Creators Link -->
+    <div style="position: fixed; bottom: 20px; left: 20px; z-index: 100;">
+      <button class="icon-btn" onclick="location.href='about_us.html'"
+        style="background: white; padding: 8px 15px; border-radius: 20px; font-size: 0.8rem; box-shadow: 0 4px 0 #ddd;">
+        👤 ผู้จัดทำ
+      </button>
+    </div>
+
 
 
     <script>
