--- a/index.html
+++ b/index.html
@@ -23,8 +23,10 @@
   </div>
 
   <script>
-    if ("serviceWorker" in navigator) {
-      navigator.serviceWorker.register("service-worker.js");
+    if ("serviceWorker" in navigator && window.location.protocol.startsWith('http')) {
+      navigator.serviceWorker.register("service-worker.js").catch(err => {
+        console.warn("ServiceWorker registration skipped (likely local file):", err.message);
+      });
     }
   </script>
 
