--- a/problems.html
+++ b/problems.html
@@ -8,6 +8,7 @@
   <meta name="theme-color" content="#FFB7B2">
   <title>เลือกปัญหา</title>
   <link rel="stylesheet" href="style.css">
+  <script src="ai-service.js"></script>
   <style>
     /* Chat Interface Styles */
     .chat-container {
@@ -138,10 +139,28 @@
       </div>
 
       <div style="display: flex; gap: 10px;">
-        <input id="aiInput" class="cartoon-input" style="margin: 0;" placeholder="พิมพ์คำถาม..."
+        <input id="aiInput" class="cartoon-input" style="margin: 0;" placeholder="พิมพ์คำถาม หรือโจทย์เลข..."
           onkeypress="handleEnter(event)">
         <button class="cartoon-btn" style="width: auto; margin: 0; padding: 0 20px;" onclick="askSmartAI()">ส่ง</button>
       </div>
+
+      <div style="margin-top: 15px; border-top: 1px dashed #ccc; padding-top: 10px; text-align: center;">
+        <button onclick="toggleSettings()"
+          style="background:none; border:none; color:#888; font-size:0.8rem; cursor:pointer;">⚙️ ตั้งค่า (Advanced
+          Mode)</button>
+        <div id="aiSettings" style="display:none; margin-top:10px;">
+          <input id="apiKeyInput" type="password" class="cartoon-input"
+            placeholder="ใส่ Gemini API Key เพื่อแก้โจทย์ยากๆ..." style="font-size:0.8rem; padding:10px;">
+          <button class="cartoon-btn secondary" style="font-size:0.8rem; padding:5px 10px; margin-top:5px;"
+            onclick="saveApiKey()">บันทึกคีย์</button>
+          <button class="cartoon-btn"
+            style="font-size:0.8rem; padding:5px 10px; margin-top:5px; background: #FFCDD2; color: #C62828;"
+            onclick="clearMemory()">🧹 ล้างหน้าจอ</button>
+          <p style="font-size:0.7rem; color:#aaa; margin-top:5px;">โหมด Advanced
+            จะทำให้บอทคำนวณเลขและเขียนโค้ดได้เก่งขึ้น</p>
+        </div>
+      </div>
+
     </div>
 
   </div>
@@ -241,74 +260,148 @@
         intent: "greeting",
         keywords: ["สวัสดี", "ดีจ้า", "ฮัลโหล", "ทักทาย", "hi", "hello"],
         category: "general",
-        response: "สวัสดีครับ! วันนี้เป็นยังไงบ้าง? มีเรื่องไม่สบายใจอะไรเล่าให้พี่ฟังได้นะ 😊"
+        response: [
+          "สวัสดีครับ! วันนี้เป็นยังไงบ้าง? มีเรื่องไม่สบายใจอะไรเล่าให้พี่ฟังได้นะ 😊",
+          "ดีจ้า! พี่หุ่นยนต์มาแล้ว มีเรื่องอะไรอยากระบายไหมครับ?",
+          "สวัสดีครับผม! วันนี้หน้าตาสดใสจัง มีปัญหาอะไรให้พี่ช่วยวิเคราะห์ไหมเอ่ย?"
+        ]
       },
       {
         intent: "identity",
         keywords: ["ใคร", "ชื่ออะไร", "ทำอะไรได้", "หุ่นยนต์"],
         category: "general",
-        response: "พี่คือหุ่นยนต์ LifeFix ครับ! พี่ถูกสร้างมาเพื่อช่วยน้องๆ แก้ปัญหาชีวิตประจำวัน ทั้งเรื่องเรียน เรื่องเงิน หรือเรื่องสุขภาพ ถามมาได้เลย!"
+        response: [
+          "พี่คือหุ่นยนต์ LifeFix ครับ! พี่ถูกสร้างมาเพื่อช่วยน้องๆ แก้ปัญหาชีวิตประจำวัน ถามมาได้เลย!",
+          "พี่คือผู้ช่วยอัจฉริยะที่จะช่วยวิเคราะห์ปัญหาให้วัยรุ่นอย่างเราครับ มีเรื่องอะไรปรึกษาพี่ได้เสมอนะ",
+          "เรียกพี่ว่า LifeFix Bot ก็ได้ครับ พี่พร้อมรับฟังและช่วยหาทางออกให้ทุกปัญหาในหมวดหมู่ที่เลือกมาเลย!"
+        ]
       },
       // --- Finance ---
       {
         intent: "save_money",
         keywords: ["ออม", "เก็บเงิน", "หยอดกระปุก", "รวย", "เงินเก็บ"],
         category: "การเงิน",
-        response: "อยากเก็บเงินเก่งๆ ใช่ไหม? ลองสูตรนี้ดูสิ:\n1. หักเงินออมทันทีที่ได้ค่าขนม (เช่น 10%)\n2. หยอดกระปุกทุกวันที่กลับถึงบ้าน\n3. ถ้าอยากได้ของแพงๆ ให้รอก่อน 3 วัน ถ้ายังอยากได้ค่อยซื้อ\nเริ่มทำวันนี้เลยนะ! 💰"
+        response: [
+          "วิเคราะห์ดูแล้ว น้องอยากสร้างความมั่นคงทางการเงินใช่ไหมครับ? พี่แนะนำให้เริ่มจาก 'หักดิบ' ออมก่อนใช้ 10-20% ทันทีที่ได้เงินมาครับ และลองแยกประเภทเงินเก็บให้ชัดเจน การเห็นเป้าหมายที่ชัดเจนจะทำให้น้องมีวินัยมากขึ้นแน่นอน! 💰",
+          "เรื่องการออมเป็นทักษะที่สำคัญมากครับ ลองใช้สูตร 50/30/20 ดูไหม (จำเป็น 50, อยากได้ 30, ออม 20) วิธีนี้ช่วยให้เราคุมเงินได้ดีขึ้นมากเลยครับสู้ๆ!",
+          "ถ้าอยากเก็บเงินให้ได้ผล ลองตั้งเป้าหมายเล็กๆ ดูระยะสั้นก่อนครับ เช่น ออมเพื่อซื้อหนังสือที่ชอบ การเห็นความสำเร็จเล็กๆ จะช่วยให้น้องอยากออมเพิ่มขึ้นเรื่อยๆ เองครับ 🏦"
+        ]
       },
       {
         intent: "debt",
         keywords: ["หนี้", "ติดเงิน", "ยืมเงิน", "คืนเงิน"],
         category: "การเงิน",
-        response: "เรื่องหนี้อึดอัดใจเนอะ พี่แนะนำให้ลิสต์ออกมาว่าติดเงินใครเท่าไหร่ แล้วทยอยคืนทีละนิดครับ หรือลองคุยกับเจ้าหนี้ตรงๆ ว่าเราจะผ่อนคืนยังไง ความจริงใจสำคัญที่สุดนะ 🤝"
+        response: [
+          "เรื่องเงินกู้หรือการติดหนี้เพื่อนเป็นเรื่องที่ต้องจัดการด้วยความสัตย์จริงครับ พี่แนะนำให้ทำตารางสรุปยอดหนี้ทั้งหมด แล้วคุยกับเจ้าหนี้ตรงๆ เพื่อขอทยอยผ่อนตามกำลังที่มีครับ การรักษาเครดิตและความสัมพันธ์สำคัญกว่าตัวเงินในระยะยาวนะ 🤝",
+          "การมีหนี้ทำให้เราเครียดได้ง่ายครับ ลองลดรายจ่ายที่ไม่จำเป็นออกไปให้มากที่สุด เพื่อนำเงินส่วนนั้นไปใช้หนี้ให้หมดเร็วขึ้น พี่เชื่อว่าน้องทำได้แน่นอน!",
+          "ถ้าติดหนี้เพื่อนอยู่ พี่แนะนำให้เข้าไปขอโทษและอธิบายความจริงครับ แล้วบอกแผนการคืนเงินที่น้องทำได้จริง ความซื่อสัตย์จะช่วยรักษาความเป็นเพื่อนไว้ได้ดีที่สุดนะจ๊ะ"
+        ]
       },
       {
         intent: "spending",
         keywords: ["ใช้เงิน", "ฟุ่มเฟือย", "หมด", "ซื้อของ", "ช็อป"],
         category: "การเงิน",
-        response: "เงินหมดไวใช่ไหม? ลองจด 'รายรับ-รายจ่าย' ดูสิครับ (ในแอปเรามีฟีเจอร์นี้นะ!) พอเราเห็นตัวเลข เราจะรู้ทันทีว่าเราหมดเงินไปกับอะไรมากที่สุด แล้วจะแก้ได้ตรงจุดเลย! 📉"
+        response: [
+          "หากรู้สึกว่าเงินรั่วไหลเร็วเกินไป พี่อยากให้ลองสังเกต 'อารมณ์' ก่อนการจ่ายเงินครับ หลายครั้งเราซื้อเพราะความอยากชั่วคราว ลองใช้กฎ 'รอ 3 วัน' ก่อนจะกดซื้อของชิ้นใหญ่ออกไปนะครับ จะช่วยให้สมองส่วนเหตุผลทำงานได้ดีขึ้นมากเลย 📉",
+          "ลองทำบัญชีรายรับรายจ่ายแบบง่ายๆ ในมือถือดูไหมครับ? การเห็นตัวเลขที่จ่ายไปจริงจะช่วยดึงสติเราได้ดีมากเลยนะ วันนี้ลองตั้งงบใช้จ่ายรายวันไว้ดูสิ!",
+          "การใช้เงินเก่งไม่ใช่เรื่องผิด แต่ต้องใช้ในสิ่งที่มีประโยชน์ครับ ลองถามตัวเองก่อนจ่ายว่า 'สิ่งนี้จำเป็นจริงๆ หรือแค่ต้องการ' ถ้าตอบตัวเองได้ น้องจะคุมเงินได้เก่งขึ้นแน่นอนจ้า"
+        ]
       },
       // --- Study ---
       {
         intent: "exam",
         keywords: ["สอบ", "คะแนน", "เกรด", "ตก", "อ่านหนังสือ"],
         category: "การเรียน",
-        response: "ช่วงสอบสำคัญมาก! เทคนิคคือ:\n1. อ่านสารบัญก่อนเพื่อดูภาพรวม\n2. ใช้ปากกาไฮไลท์สีๆ\n3. ติวให้เพื่อน (การสอนคนอื่นจะทำให้เราจำแม่นขึ้น 90%)\nสู้เขานะ! 📚"
+        response: [
+          "วิเคราะห์จากความกังวลเรื่องการสอบ พี่แนะนำให้เปลี่ยนจากการ 'ท่องจำ' เป็นการ 'ทำความเข้าใจและอธิบาย' ครับ ลองหาเพื่อนมาติวให้กันดูนะ การสอนคนอื่นคือการทบทวนตัวเองที่ดีที่สุด และอย่าลืมแบ่งเวลาพักสมองด้วยเทคนิค 50/10 เพื่อให้สมองไม่ล้าเกินไปจ้า 📚",
+          "เรื่องเกรดไม่ได้ตัดสินทุกอย่างในชีวิต แต่การตั้งใจทำเต็มที่คือสิ่งสำคัญครับ ลองทำ Mind Map สรุปบทเรียนดูนะ จะช่วยให้จำภาพรวมได้ดีกว่าการอ่านหนังสือแบบผ่านๆ ครับ!",
+          "ถ้ากลัวสอบตก พี่แนะนำให้ลองทำข้อสอบเก่าย้อนหลังดูครับ จะช่วยให้เรารู้จุดบอดของตัวเองได้แม่นยำที่สุด สู้ๆ นะจ๊ะ พี่เป็นกำลังใจให้!"
+        ]
       },
       {
         intent: "homework",
         keywords: ["การบ้าน", "ไม่เสร็จ", "ยาก", "ลอก", "ครู"],
         category: "การเรียน",
-        response: "การบ้านเยอะเหรอ? ลองใช้เทคนิค Pomodoro ดูครับ ตั้งเวลาทำ 25 นาที พัก 5 นาที จะช่วยให้ไม่เบื่อและงานเสร็จไวกว่าทำรวดเดียวด้วยนะ! ⏰"
+        response: [
+          "การบ้านที่ดูเหมือนภูเขา จะเล็กลงได้ถ้าเราเริ่มทำทีละนิดครับ พี่แนะนำให้เริ่มจากข้อที่ทำได้ก่อนเพื่อสร้างกำลังใจ (Small Wins) แล้วค่อยลุยข้อที่ยากขึ้นครับ อย่าลืมบันทึกกำหนดการส่งไว้ในปฏิทินจะได้ไม่ลืมส่งงานให้ตรงเวลาด้วยนะ! ⏰",
+          "ถ้าการบ้านมันยากเกินไป ลองปรึกษาครูหรือเพื่อนที่เก่งหมวดนั้นดูนะ การขอความช่วยเหลือคือจุดเริ่มต้นของการเรียนรู้ครับ อย่าแบกไว้คนเดียวจนเครียดนะจ๊ะ",
+          "เทคนิคจัดการการบ้านคือ 'ทำให้เสร็จในโรงเรียน' ให้ได้มากที่สุดครับ จะช่วยให้เรามีเวลาพักผ่อนที่บ้านได้เต็มที่ ลองหาเวลาว่างช่วงพักเที่ยงทำดูสักนิดสิ!"
+        ]
       },
       // --- Food ---
       {
         intent: "health_eating",
         keywords: ["กิน", "อ้วน", "ผอม", "ลดน้ำหนัก", "หิว", "ข้าว"],
         category: "อาหาร",
-        response: "เรื่องกินสำคัญมาก! พยายามกินให้ครบ 3 มื้อนะ โดยเฉพาะมื้อเช้าห้ามขาด! ถ้ากลัวอ้วน ให้ลดของหวานและน้ำอัดลม เปลี่ยนมากินผลไม้แทน สดชื่นและไม่อ้วนด้วย! 🍎"
+        response: [
+          "เรื่องโภชนาการคือพื้นฐานของสุขภาพดีครับ ลองเน้นการกินโปรตีนและผักในปริมาณที่เหมาะสมแทนการกินแป้งเยอะๆ นะครับ และหลีกเลี่ยงการกินอาหารแปรรูปที่โซเดียมสูง จะช่วยให้ร่างกายรู้สึกกระปรี้กระเปร่าขึ้นมากเลย! 🍎",
+          "ถ้าอยากสุขภาพดี ลองใช้กฎ 'จานอาหาร 2:1:1' (ผัก 2 ส่วน, ข้าว 1 ส่วน, เนื้อสัตว์ 1 ส่วน) ดูนะครับ ง่ายและเห็นผลจริงในการคุมน้ำหนักและรูปร่างจ้า",
+          "การดื่มน้ำเปล่าให้เพียงพอ (2-3 ลิตรต่อวัน) ช่วยลดความอยากอาหารและทำให้สมองแล่นขึ้นด้วยนะ ลองจดพฤติกรรมการกินของตัวเองดูสักอาทิตย์สิ จะเห็นจุดที่ต้องปรับแก้ชัดเจนเลย!"
+        ]
       },
       {
         intent: "pain",
         keywords: ["ปวดท้อง", "เจ็บ", "ไม่สบาย", "อาเจียน"],
         category: "อาหาร",
-        response: "ถ้าไม่สบายเกี่ยวกับท้อง ไส้ ต้องระวังเรื่องความสะอาดนะ ล้างมือก่อนกินข้าวเสมอ และถ้าปวดมากต้องบอกผู้ปกครองทันทีนะครับ อย่าเก็บไว้คนเดียว 🏥"
+        response: [
+          "ถ้าอาการปวดท้องเกิดขึ้นบ่อย พี่แนะนำให้ลองสังเกตพฤติกรรมการเคี้ยวและเวลาที่กินข้าวดูครับ การเคี้ยวไม่ละเอียดหรือกินข้าวไม่ตรงเวลาคือสาเหตุหลักของโรคกระเพาะ แต่ถ้ามีไข้ร่วมด้วย พี่แนะนำให้ปรึกษาแพทย์โดยด่วนเพื่อความปลอดภัยนะครับ 🏥",
+          "อาการปวดท้องหลังกินอาหารอาจเกิดจากกรดไหลย้อนได้ครับ ลองเลี่ยงการนอนทันทีหลังกินเสร็จดูนะ (ทิ้งช่วงอย่างน้อย 3 ชม.) จะช่วยให้อาการดีขึ้นได้มากเลยจ๊ะ",
+          "พักผ่อนให้เพียงพอและจิบน้ำอุ่นๆ ดูนะ ถ้าอาการไม่ดีขึ้นอย่าเก็บไว้คนเดียว บอกคุณพ่อคุณแม่หรือไปสถานพยาบาลใกล้บ้านนะ พี่เป็นห่วงนะครับ"
+        ]
       },
       // --- Other ---
       {
         intent: "stress",
-        keywords: ["เครียด", "เบื่อ", "เซ็ง", "เศร้า", "ร้องไห้"],
+        keywords: ["เครียด", "เบื่อ", "เซ็ง", "เศร้า", "ร้องไย้"],
         category: "อื่นๆ",
-        response: "โอ๋ๆ ไม่เป็นไรนะ ความเครียดเป็นเรื่องปกติ ลองหายใจเข้าลึกๆ นับ 1-10 หรือไปเดินเล่นดูต้นไม้สีเขียวๆ จะช่วยให้สมองโล่งขึ้นครับ พี่เป็นกำลังใจให้นะ 💚"
+        response: [
+          "ความรู้สึกเครียดเป็นกลไกธรรมชาติของร่างกายครับ พี่แนะนำให้ลองเขียนสิ่งที่กังวลออกมาเป็นข้อๆ ในกระดาษ (Brain Dump) จะช่วยให้มองเห็นปัญหาและจัดการมันได้ง่ายขึ้นครับ พี่เป็นกำลังใจให้เสมอ 💚",
+          "เวลาเศร้าๆ ลองออกไปเดินเล่นในที่ที่มีสีเขียวของต้นไม้ดูนะ หรือฟังเพลงที่ชอบแต่ไม่เศร้าเกินไป การเปลี่ยนบรรยากาศช่วยปรับจูนอารมณ์เราได้ดีมากเลยจ้า",
+          "กอดแน่นๆ นะครับ! ถ้าความเครียดมันหนักเกินไป ลองหาคนที่ไว้ใจได้ระบายออกมาดู การแชร์ความทุกข์จะช่วยให้ความหนักอึ้งในใจเบาบางลงได้จริงๆ นะ"
+        ]
       },
       {
         intent: "sleep",
         keywords: ["นอน", "ง่วง", "ตื่นสาย", "ไม่หลับ"],
         category: "อื่นๆ",
-        response: "อย่านอนดึกนะ! วัยเรียนควรนอน 8-9 ชั่วโมง ถ้านอนไม่หลับ ลองงดเล่นมือถือก่อนนอน 30 นาที จะช่วยให้หลับลึกและตื่นมาสดชื่นแน่นอน 😴"
+        response: [
+          "วิเคราะห์เรื่องการนอน ลองปรับสภาพแวดล้อมห้องนอนให้มืดและเย็นดูครับ และที่สำคัญคือ 'งดแสงสีฟ้า' จากหน้าจออย่างน้อย 30 นาทีก่อนนอน เพื่อให้ร่างกายผลิตเมลาโทนินได้เต็มที่ การนอนที่มีคุณภาพสำคัญมากนะ 😴",
+          "ถ้าข่มตาหลับไม่ลง ลองทำ 'สมาธิแนวทางลมหายใจ' ดูสัก 5-10 นาทีนะครับ ปล่อยวางความคิดที่ฟุ้งซ่านแล้วโฟกัสที่ร่างกาย จะช่วยให้เข้าสู่ภาวะผ่อนคลายและหลับง่ายขึ้นจ้า",
+          "ตารางการนอนที่สม่ำเสมอคือคำตอบครับ ลองนอนและตื่นในเวลาเดิมทุกวันดูนะ ร่างกายจะมีระเบียบและทำให้เราไม่รู้สึกเพลียระหว่างวันเลย สู้ๆ ครับ!"
+        ]
+      },
+      // --- Expanded Data ---
+      {
+        intent: "internet",
+        keywords: ["เน็ต", "อินเทอร์เน็ต", "ช้า", "โหลดไม่ได้", "wifi", "ไวไฟ"],
+        category: "อื่นๆ",
+        response: [
+          "ถ้าเน็ตช้า ลองรีสตาร์ท Router หรือเปิด-ปิด Flight Mode ในมือถือดูนะครับ มักจะช่วยล้างสัญญาณเก่าได้ดีมากเลย! 🌐",
+          "ตรวจสอบดูว่ามีแอปไหนแอบโหลดข้อมูลอยู่พื้นหลังหรือเปล่านะ? บางทีการปิดแอปที่ไม่ใช้ก็ช่วยให้เน็ตวิ่งเร็วขึ้นได้ครับ",
+          "ถ้า WiFi มีปัญหา ลองขยับไปอยู่ใกล้ตัวส่งสัญญาณดูนะ หรือสลับไปใช้เน็ตมือถือชั่วคราวเผื่อระบบเครือข่ายแถวนั้นล่มครับ"
+        ]
+      },
+      {
+        intent: "motivation",
+        keywords: ["ขี้เกียจ", "ไม่อยากทำ", "ไม่มีแรง", "หมดไฟ", "เบื่อ"],
+        category: "อื่นๆ",
+        response: [
+          "ความรู้สึกหมดไฟเกิดขึ้นได้กับทุกคนครับ ลองเริ่มจากทำอะไรเล็กๆ แค่ 5 นาทีดูสิ (กฎ 5 นาที) พอเริ่มแล้วสมองจะอยากทำต่อเองครับ ⚡",
+          "ลองพักสายตาจากหน้าจอ แล้วไปล้างหน้าให้สดชื่นดูนะครับ บางทีร่างกายแค่ต้องการการกระตุ้นนิดหน่อยเท่านั้นเอง!",
+          "เป้าหมายใหญ่มันน่ากลัว ลองย่อยมันให้เล็กลงเป็นข้อๆ แล้วค่อยๆ ขีดฆ่าทีละข้อดูนะ การเห็นความสำเร็จเล็กๆ จะช่วยเพิ่มพลังให้น้องครับ"
+        ]
+      },
+      {
+        intent: "computer_basic",
+        keywords: ["คอม", "ค้าง", "เปิดไม่ติด", "ช้า", "ไวรัส"],
+        category: "อื่นๆ",
+        response: [
+          "ถ้าคอมค้าง กด Ctrl+Alt+Del เพื่อปิดโปรแกรมที่กินสเปคดูก่อนนะ ถ้าไม่ไหวจริงๆ การ Restart คือแม่ไม้ไม้ตายที่ดีที่สุดครับ! 💻",
+          "ลองลบไฟล์ขยะในเครื่องออกบ้างนะครับ พื้นที่ว่างใน Hard Drive ที่เหลือน้อยเกินไปมักจะทำให้คอมทำงานช้าลงอย่างเห็นได้ชัดเลย",
+          "ตรวจสอบดูว่าเครื่องร้อนเกินไปไหม? ฝุ่นที่พัดลมอาจทำให้ระบายความร้อนไม่ทัน จนคอมต้องลดความเร็วลงเพื่อรักษาความคงทนครับ"
+        ]
       }
     ];
-
     function handleEnter(e) {
       if (e.key === 'Enter') askSmartAI();
     }
@@ -322,8 +415,30 @@
       chatBox.scrollTop = chatBox.scrollHeight;
     }
 
-    function askSmartAI() {
+    function toggleSettings() {
+      const el = document.getElementById('aiSettings');
+      el.style.display = el.style.display === 'none' ? 'block' : 'none';
+      if (el.style.display === 'block') {
+        document.getElementById('apiKeyInput').value = AIService.getApiKey();
+      }
+    }
+
+    function saveApiKey() {
+      const key = document.getElementById('apiKeyInput').value.trim();
+      AIService.setApiKey(key);
+      alert(key ? "บันทึก API Key แล้วครับ! พี่หุ่นยนต์พร้อมวิเคราะห์โจทย์ยากๆ แล้ว" : "ลบ API Key แล้วครับ");
+      toggleSettings();
+    }
+
+    function clearMemory() {
+      const chatBox = document.getElementById('chatBox');
+      chatBox.innerHTML = '<div class="chat-bubble bubble-bot">สวัสดีครับ! มีอะไรให้พี่หุ่นยนต์ช่วยไหมเอ่ย? ถามมาได้เลยนะ! 😃</div>';
+      toggleSettings();
+    }
+
+    async function askSmartAI() {
       const inputEl = document.getElementById('aiInput');
+      const btnEl = document.querySelector('button[onclick="askSmartAI()"]');
       const text = inputEl.value.trim();
       if (!text) return;
 
@@ -331,75 +446,66 @@
       addBubble(text, 'user');
       inputEl.value = '';
 
+      // Disable input
+      inputEl.disabled = true;
+      btnEl.disabled = true;
+
       // 2. Show Typing Indicator
+      toggleTyping(true);
+
+      // 3. Process Logic
+      try {
+        const response = await AIService.solve(text, cat, knowledgeBase);
+        addBubble(response.text, 'bot');
+
+        // --- Redirection Logic ---
+        if (response.redirect && response.redirect.cat !== cat) {
+          const targetCat = response.redirect.cat;
+          const targetProb = response.redirect.problem;
+
+          setTimeout(() => {
+            if (targetProb) {
+              addBubble(`เดี๋ยวพี่พาไปดูวิธีแก้ปัญหาเรื่อง "${targetProb}" ในหมวด "${targetCat}" นะครับ... 🏃‍♂️💨`, 'bot');
+            } else {
+              addBubble(`เดี๋ยวพี่พาไปดูข้อมูลเรื่องนี้ในหมวด "${targetCat}" นะครับ... 🏃‍♂️💨`, 'bot');
+            }
+
+            setTimeout(() => {
+              localStorage.setItem("cat", targetCat);
+              if (targetProb) {
+                localStorage.setItem("problem", targetProb);
+                location.href = "detail.html";
+              } else {
+                location.reload();
+              }
+            }, 1800);
+          }, 1000);
+        }
+      } catch (err) {
+        console.error("AI Error:", err);
+        addBubble("ขอโทษทีจ้า ระบบขัดข้องนิดหน่อย ลองใหม่อีกครั้งนะ!", 'bot');
+      }
+
+      toggleTyping(false);
+
+      // Re-enable input
+      inputEl.disabled = false;
+      btnEl.disabled = false;
+      inputEl.focus();
+    }
+
+    function toggleTyping(show) {
       const typing = document.getElementById('typingIndicator');
-      typing.style.display = 'flex';
+      typing.style.display = show ? 'flex' : 'none';
       const chatBox = document.getElementById('chatBox');
       chatBox.scrollTop = chatBox.scrollHeight;
-
-      // 3. Process Logic (Simulated Delay)
-      setTimeout(() => {
-        typing.style.display = 'none';
-        const response = processQuery(text);
-        addBubble(response, 'bot');
-      }, 1200);
     }
 
-    function processQuery(query) {
-      const lowerQ = query.toLowerCase();
-      const currentCat = localStorage.getItem("cat"); // "การเงิน", "การเรียน", "อาหาร", "อื่นๆ"
-
-      // Step 1: Score all intents
-      let bestMatch = null;
-      let maxScore = 0;
-
-      knowledgeBase.forEach(item => {
-        let score = 0;
-        item.keywords.forEach(k => {
-          if (lowerQ.includes(k)) score += 1;
-        });
-
-        if (score > maxScore) {
-          maxScore = score;
-          bestMatch = item;
-        }
+    // Only register ServiceWorker on supported protocols (http/https)
+    if ("serviceWorker" in navigator && window.location.protocol.startsWith('http')) {
+      navigator.serviceWorker.register("service-worker.js").catch(err => {
+        console.warn("ServiceWorker registration skipped (likely local file):", err.message);
       });
-
-      // Step 2: Analyze Result
-
-      // Case A: No keyword match found
-      if (maxScore === 0) {
-        return "พี่หุ่นยนต์ยังไม่ค่อยเข้าใจคำถามครับ 😅 ลองถามใหม่ด้วยคำง่ายๆ หรือถามเกี่ยวกับหัวข้อ " + currentCat + " ได้เลยครับ";
-      }
-
-      // Case B: General Intent (Greeting/Identity) - Always allow
-      if (bestMatch.category === "general") {
-        return bestMatch.response;
-      }
-
-      // Case C: Strict Category Enforcement
-      // If the best matching intent belongs to a different category than the current page
-      if (bestMatch.category !== currentCat && bestMatch.category !== "อื่นๆ") { // "อื่นๆ" might sometimes overlap, but let's be strict usually
-        // Exception: "อื่นๆ" category page allows generic queries? Let's say yes if current is "อื่นๆ"
-        if (currentCat === "อื่นๆ") {
-          // If current is "Others", maybe allow everything? Or strictly "Others"?
-          // Let's be strict: if I am in "Others" but ask about "Money", should I answer?
-          // The prompt said: "answer according to the topic... if outside topic, refuse and suggest"
-          if (bestMatch.category === "การเงิน" || bestMatch.category === "การเรียน" || bestMatch.category === "อาหาร") {
-            return `คำถามนี้ดูเหมือนจะเป็นเรื่อง "${bestMatch.category}" นะครับ 🤔\nตอนนี้เราอยู่ที่หมวด "${currentCat}"\nลองย้ายไปหมวด "${bestMatch.category}" เพื่อคุยเรื่องนี้จะดีกว่าครับ`;
-          }
-        } else {
-          // Current is Money/Study/Food, but Intent is diff
-          return `อุ๊ย! คำถามนี้เป็นเรื่องเกี่ยวกับ "${bestMatch.category}" ครับ 🚧\nแต่นี่คือห้อง "${currentCat}"\nพี่หุ่นยนต์ขออนุญาตไม่ตอบข้ามห้องนะ เดี๋ยวเพื่อนๆ งง! ย้ายห้องกันเถอะ`;
-        }
-      }
-
-      // Case D: Correct Category or Safe Fallback
-      return bestMatch.response;
-    }
-
-    if ("serviceWorker" in navigator) {
-      navigator.serviceWorker.register("service-worker.js");
     }
   </script>
 
