--- a/sign_language.html
+++ b/sign_language.html
@@ -128,8 +128,7 @@
                     <!-- Hello -->
                     <div class="sign-item">
                         <div class="sign-img-container">
-                            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c5/Thai_greeting_Wai.jpg/640px-Thai_greeting_Wai.jpg"
-                                class="sign-img" alt="Wai">
+                            <img src="C:\Users\Dell\Downloads\download.jpg" class="sign-img" alt="Wai">
                         </div>
                         <div>
                             <div class="sign-title">สวัสดี (Hello)</div>
@@ -142,8 +141,7 @@
                     <!-- Thank you -->
                     <div class="sign-item">
                         <div class="sign-img-container">
-                            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/4e/Thai_Wai_2.jpg/480px-Thai_Wai_2.jpg"
-                                class="sign-img" alt="Thank you">
+                            <img src="C:\Users\Dell\Downloads\ดาวน์โหลด.jpg" class="sign-img" alt="Thank you">
                         </div>
                         <div>
                             <div class="sign-title">ขอบคุณ (Thank you)</div>
@@ -157,8 +155,8 @@
                     <!-- I Love You -->
                     <div class="sign-item">
                         <div class="sign-img-container">
-                            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/ca/I_Love_You_Hand_Symbol.svg/1200px-I_Love_You_Hand_Symbol.svg.png"
-                                class="sign-img" alt="I Love You" style="object-fit: contain; padding: 5px;">
+                            <img src="C:\Users\Dell\Downloads\ดาวน์โหลด (1).jpg" class="sign-img" alt="I Love You"
+                                style="object-fit: contain; padding: 5px;">
                         </div>
                         <div>
                             <div class="sign-title">ฉันรักเธอ (I love you)</div>
@@ -171,8 +169,7 @@
                     <!-- Father -->
                     <div class="sign-item">
                         <div class="sign-img-container">
-                            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d0/ASL_Dad.jpg/320px-ASL_Dad.jpg"
-                                class="sign-img" alt="Father">
+                            <img src="C:\Users\Dell\Downloads\3061.jpg" class="sign-img" alt="Father">
                         </div>
                         <div>
                             <div class="sign-title">พ่อ (Father)</div>
